@@ -45,7 +45,7 @@
   Requirements
   ------------
 
-   o  A Java 1.3 or later compatible virtual machine for your operating system.
+   o  A Java 1.4 or later compatible virtual machine for your operating system.
 
   Optional Libraries
   ------------------
