@@ -59,6 +59,10 @@ Bug fixing is an on-going task, so it is implied in all sub-releases.
   * Exporting 256 color indexed PNG files in Squiggle now works.
   * Avoid an NPE in ttf2svg when resolving substitutions for Arabic script.
 
+5. Misc
+
+  * Minimum required Java version was raised to 1.4.
+
 1.7beta1 -> 1.7
 ---------------
 
